# givefood

./: .flake8  .gcloudignore  .gitignore  LICENSE  MIGRATION_NEED_ID.md  PERFORMANCE_IMPROVEMENTS.md  README.md  SECURITY_SUMMARY.md  TESTING.md  abbreviations.md  app.yaml  conftest.py  cron.yaml  crons.md  gunicorn.conf.py  index.yaml  install_deps  languages.md  main.py  manage.py  messages.mo  order_text_example.txt  pyproject.toml  pytest.ini  queue.yaml  requirements-dev.txt  requirements.txt  searchsaver.yaml  test_settings.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: copilot-setup-steps.yml  pythonapp.yml  test.yml
GiveFood/: Models.swift
docs/: abbreviations.md  crons.md  database_indexes_migration.sql  languages.md  slug_redirect.md  sql.md  trigram_indexes.md
docs/yearsummary/: 2020.md  2021.md  2022.md  2023.md  2024.md  2025.md  README.md
gfadmin/: README.md  README_FOODBANK_CHECK.md  context_processors.py  urls.py  views.py
gfadmin/templates/: admin_index.html  adminindex.html  credentials.html  find_locations.html  foodbank.html  foodbanks.html  foodbanks_christmascards.html  form.html  items.html  locations.html  (+14 more)
gfadmin2/: README.md  __init__.py  apps.py  urls.py  views.py
gfapi1/: README.md  urls.py  views.py
gfapi2/: README.md  func.py  tests.py  urls.py  views.py
gfapi3/: README.md  tests.py  urls.py  views.py
gfapp/: README.md  urls.py  views.py
gfauth/: README.md  tests.py  urls.py  views.py
gfdash/: README.md  tests.py  urls.py  views.py
gfdumps/: README.md  tests.py  urls.py  views.py
gfoffline/: README.md  tests.py  urls.py  views.py
gfwfbn/: README.md  firebase_views.py  forms.py  notification_views.py  tests.py  urls.py  views.py
gfwrite/: README.md  forms.py  tests.py  urls.py  views.py
givefood/: README.md  boot.py  checks.py  context_processors.py  forms.py  func.py  gunicorn.conf.py  middleware.py  models.py  settings.py  settings_live.py  tests.py  urls.py  views.py  wsgi.py
libs/: beautifulsoup.py
requirements/: dev.txt  prod.txt
simple_search/: cache.py
static/: tt-test.html  wfbn_manifest.json
(+850 files in other folders)
